@@ -134,7 +134,7 @@
 				<td style='width: 100%; border: 0px; margin: 0px; padding: 0px;'>
 				   <div style='margin-top: 4px' id='vboxSettingsSystemProcessorCap' class='slider'><div class='sliderScale'></div></div>
 				</td>
-				<td><input type='text' class='vboxText vboxRunningEnabled' name='vboxSettingsSystemProcessorCapValue' size='2' class='sliderValue' /></td>
+				<td><input type='text' class='vboxText vboxRunningEnabled' name='vboxSettingsSystemProcessorCapValue' size='3' class='sliderValue' /></td>
 			</tr>
 			<tr style='vertical-align: top;' class='vboxRunningEnabled'>
 				<td style='border: 0px; margin: 0px; padding: 0px;'>
